--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,19 @@
-#WILL TRIGGER
-
+name: WebDriverIO Automation
 on:
-  issues:
-    types:
-      - opened
-
-jobs:
-  label_issue:
-    runs-on: ubuntu-latest
-    steps:
-      - env:
-          GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
-          ISSUE_URL: ${{ github.event.issue.html_url }}
-        run: |
-          gh issue edit $ISSUE_URL --add-label "triage"
+  workflow_dispatch:
+    inputs:
+        typeOfTesting:
+          type: choice
+          description: Select Type of Test
+          default: 'stage-test-local-All'
+          required: true
+          options: 
+          - stage-test-local-All
+          - stage-test
+          - stage-test-local-Sanity
+          - prod-test
+    branches:
+      - workingBranch
+      - JSNew
+  schedule:
+    - cron: "*/5 * * * *"
