--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,14 @@
-name: WebDriverIO Automation
 on:
   workflow_dispatch:
     inputs:
-        typeOfTesting:
-          type: choice
-          description: Select Type of Test
-          default: 'stage-test-local-All'
-          required: true
-          options: 
-          - stage-test-local-All
-          - stage-test
-          - stage-test-local-Sanity
-          - prod-test
-    branches:
-      - workingBranch
-      - JSNew
-  schedule:
-    - cron: "*/5 * * * *"
+      logLevel:
+        required: true
+        type: string
+
+jobs:
+  test:
+    uses: ./.github/workflows/run-job-with-params.yml
+    secrets: inherit
+    with:
+      springProfile: 'production'
+      logLevel: ${{ inputs.logLevel || 'DEBUG' }}
