--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,21 @@
+name: Reusable deploy workflow
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
-      logLevel:
+      build_id:
+        required: true
+        type: number
+      deploy_target:
         required: true
         type: string
+      perform_deploy:
+        required: true
+        type: boolean
 
 jobs:
-  test:
-    uses: ./.github/workflows/run-job-with-params.yml
-    secrets: inherit
-    with:
-      springProfile: 'production'
-      logLevel: ${{ inputs.logLevel || 'DEBUG' }}
+  deploy:
+    runs-on: ubuntu-latest
+    if: ${{ inputs.perform_deploy }}
+    steps:
+      - name: Deploy build to target
+        run: deploy --build ${{ inputs.build_id }} --target ${{ inputs.deploy_target }}
