--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,32 @@
-on:
+name: Continuous Integration
+
+on: 
   workflow_dispatch:
     inputs:
-      build_id:
+      reason:
+        description: 'Why are you running this manually?'
         required: true
-        type: number
-      deploy_target:
-        required: true
-        type: string
-      perform_deploy:
-        required: true
-        type: boolean
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.perform_deploy }}
+  build:
+
+    runs-on: windows-latest
+
     steps:
-      - name: Deploy build to target
-        run: deploy --build ${{ inputs.build_id }} --target ${{ inputs.deploy_target }}
+    - uses: actions/checkout@v1
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0.x'
+    - name: Build with dotnet
+      run: dotnet build --configuration Release
+      working-directory: .\src
+    - name: Test
+      run: dotnet test
+      working-directory: .\src
